--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true">
 
+        </activity>
     </application>
 
 </manifest>
